# cleantransparency-v2

./: .gcloudignore.bak  Dockerfile  Dockerfile.v2  bootstrap_v2.sh  certificado_test.crt  certificado_test.p12  check_tables.py  clave_test.key  cloudbuild.v2.yaml  cloudbuild.v2.yaml.backup  pyproject.toml  requirements.txt  schema.sql
src/api/: main.py  main.py.backup
src/api/routes/: hitl.py  query_routes.py  query_routes.py.bak  search_stats_routes.py  search_stats_routes.py.bak  signing.py  workflows.py
src/db/: database.py  run_migrations.py
src/db/migrations/: 001_initial_schema.sql
src/db/repositories/: art17_repository.py  hitl_repository.py  workflow_repository.py
src/services/: hitl.py
src/signing/: p12_signer.py
src/workflows/art17/: flow.py  flow.py.backup
