[tool.poetry]
name = "cleantransparency-v2"
version = "2.0.0"
description = "CleanTransparency v2 (isolated)"
authors = ["CleanTransparency <dev@cleantransparency.cl>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras=["standard"], version="^0.21.0"}
pydantic = "^2.5.0"
langgraph = "^0.0.20"
asyncpg = "^0.29.0"
aiohttp = "^3.9.4"
pyhanko = "^0.15.0"
cryptography = "^41.0.0"
pyOpenSSL = "^23.2.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
